# django_tutorial

./: .gitignore
mysite/: db.sqlite3  pyproject.toml
mysite/mysite/: settings.py  urls.py
mysite/polls/: admin.py  models.py  tests.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py
mysite/polls/static/polls/: style.css
mysite/polls/templates/polls/: index.html  results.html
mysite/sfdata/: apps.py  models.py  urls.py  views.py
mysite/sfdata/migrations/: 0001_initial.py  0002_remove_file_date_uploaded_remove_file_file_name_and_more.py
mysite/sfdata/templates/sfdata/: index.html  view_file.html
