[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = "exercises from official django tutorial"
authors = ["tab1tha"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
